--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.config.import=optional:secrets.properties
 
+#Banco local
+spring.datasource.url= jdbc:postgresql://localhost:5432/monstreador-api
+spring.jpa.hibernate.ddl-auto=update
