--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,4 +5,5 @@ spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 spring.datasource.url=jdbc:postgresql://localhost:5432/monstreador-api
 spring.jpa.hibernate.ddl-auto=update
 #JWT
-jwt.authorization.header=Authorization
+jwt.header=Authorization
+jwt.prefix=Bearer
