--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,7 +2,7 @@ spring.config.import=optional:secrets.properties
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.mvc.pathmatch.matching-strategy=ANT_PATH_MATCHER
 #Banco local
-spring.datasource.url=jdbc:postgresql://localhost:5432/monstreador-api
+spring.datasource.url=${MONSTREADOR_JDBC_URL}
 spring.jpa.hibernate.ddl-auto=update
 #JWT
 jwt.header=Authorization
