--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,5 +7,5 @@ spring.jpa.hibernate.ddl-auto=update
 #JWT
 jwt.header=Authorization
 jwt.prefix=Bearer
-jwt.expiration.token=600000
+jwt.expiration.token=3600000
 jwt.password.token=${MONSTREADOR_PASSWORD_TOKEN}
